# pisscam

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: HlsStream.cpp  HlsStream.h  MotionDetector.cpp  MotionDetector.h  VideoEncoder.cpp  VideoEncoder.h  Webcam.cpp  Webcam.h  common_v4l2.cpp  common_v4l2.h  pisscam.cpp  types.h
web/: index.html  index.js
